[tool.poetry]
name = "TPTBox"
version = "0.0.0"
description = "A Torso Processing Toolbox capable of processing BIDS-compatible datasets, singular niftys, points of interests, segmentations, and much more."
authors = [
    "Robert Graf <robert.graf@tum.de>",
    "Hendrik Möller <hendrik.moeller@tum.de>",
]
repository = "https://github.com/Hendrik-code/TPTBox"
license = "GNU AFFERO GENERAL PUBLIC LICENSE v3.0, 19 November 2007"
readme = "README.md"
packages = [{ include = "TPTBox" }]

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11 || ^3.12 || ^3.13 || ^3.14"
nibabel = "^5.2.0"
typing-extensions = "^4.9.0"
SimpleITK = "^2.3.1"
matplotlib = "^3.8.2"
dill = "^0.3.7"
fill-voids = "^2.0.6"
connected-components-3d = "^3.12.3"
tqdm = "*"
joblib = "*"
scikit-learn = "*"
pynrrd = "*"
requests = "*"

# --- OLD STACK (Python < 3.11)
numpy = [
  { version = ">=1.26.3,<2.0", python = "<3.11" },
  { version = ">=2.0,<3.0", python = ">=3.11" }
]

scipy = [
  { version = ">=1.11,<1.13", python = "<3.11" },
  { version = ">=1.13", python = ">=3.11" }
]

scikit-image = [
  { version = ">=0.22,<0.23", python = "<3.11" },
  { version = ">=0.24", python = ">=3.11" }
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1"
vtk = "*"
pre-commit = "*"
pyvista = "^0.43.2"
coverage = ">=7.0.1"
pytest-mock = "^3.6.0"
exceptiongroup = { version = "^1.2", python = "<3.11" }
tomli = {version = "*", python = "<3.11" }

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6"
mkdocs-material = ">=9.5"
mkdocstrings = {extras = ["python"], version = ">=0.25"}
mkdocs-gen-files = ">=0.5"
mkdocs-literate-nav = ">=0.6"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry-dynamic-versioning]
enable = true


[tool.ruff]
namespace-packages = ["datagen"]
exclude = [
    "*.ipynb",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".toml",
]
line-length = 140
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
## Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
## Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
## McCabe complexity (`C901`) by default.
#
select = [
    "E",
    "F",
    "W",
    "C901",
    "I",
    "N",
    "UP",
    "ASYNC",
    "BLE",
    "B",
    "A",
    "C4",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PYI",
    #"RET",
    "SIM",
    "TID",
    "INT",
    "ARG",
    #"PTH",
    "TD005",
    "FIX003",
    "FIX004",
    #"ERA",
    "D",
    "ANN201",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "RUF",
]


ignore = [
    "C901",
    "RUF059",
    "RUF100",
    "F401",
    "BLE001",
    "E501",
    "N801",
    "NPY002",
    "PD002",
    "PERF203",
    "PTH123",
    "PGH003",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "SIM105",
    "TRY003",
    "N999",
    "E741",
    "SIM118",  # dictionary keys
    "N802",    # function name lowercase
    "F811",
    "N803",
    "N806",
    "FURB171",
    "PLW0108",
    "B905",    # strict= in zip
    "UP007",   # Union and "|" python 3.9
    "PLC0415", # import-outside-top-level
    # Docstring rules relaxed for internal / magic / dunder members
    "D100",    # missing docstring in public module
    "D104",    # missing docstring in public package
    "D105",    # missing docstring in magic method
    "D107",    # missing docstring in __init__ (covered by class docstring)
    # Argument descriptions in existing docstrings — addressed progressively
    "D417",
    # Return-type annotation not required for private helpers
    "ANN202",
    # En-dashes (–) in docstrings are legitimate range notation (e.g. "C1–C7")
    "RUF002",
    ]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
extend-safe-fixes = ["RUF015", "C419", "C408", "B006"]
#unnecessary-iterable-allocation-for-first-element = true


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Test files: don't require docstrings on test functions / helper utilities
"unit_tests/**" = ["D101", "D102", "D103", "D205", "D415", "ANN201"]
"TPTBox/tests/**" = ["D101", "D102", "D103", "D205", "D415", "ANN201"]
# Dev tooling (standalone scripts): same relaxed docstring rules, not an importable package
"benchmarks/**" = ["D101", "D102", "D103", "D205", "D415", "ANN201", "INP001"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 20

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "except",
    "import warnings",
    "warnings\\.warn",
    "warnings\\.filter",
    "print\\(f?\"\\[!\\].*",
    "def __str__(self):",
    "def __hash__(self) -> int:",
    "assert ",
    "if TYPE_CHECKING: ",
    "raise "
]
omit = [
    "TPTBox/test/speedtest/*",
]
[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Enable reformatting of code snippets in docstrings.
docstring-code-format = true


# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Add this to your setting.json (user)
# Ctrl+shift+P settings json
#"[python]": {
#        "editor.formatOnSave": true,
#        "editor.defaultFormatter": "charliermarsh.ruff",
#        "editor.codeActionsOnSave": {
#            "source.fixAll": "explicit",
#            "source.organizeImports": "never"
#        }
#      },
#    "notebook.formatOnSave.enabled": true,
#    "notebook.codeActionsOnSave": {
#        "source.fixAll": false,
#        "source.organizeImports": false
#    },
